2008-06-21  Murray Cumming  <murrayc@murrayc.com>

	* glom/notebook_glom.h (Notebook_Glom): Made on_switch_page_handler() 
	virtual again, so that the list updates again when moving from the details 
	tab. Fixes bug #532721 (Armin Burgmeier).

2008-06-16  Johannes Schmid  <johannes.schmid@openismus.com>

	* glom/Makefile.am:
	* glom/utility_widgets/egg/toolpalette/Makefile.am:
	* glom/utility_widgets/egg/util/Makefile.am:
	Fixed distcheck

2008-06-16  Johannes Schmid  <johannes.schmid@openismus.com>

	* glom/utility_widgets/egg/toolpalette/Makefile.am:
	Fixed distcheck

2008-06-16  Johannes Schmid  <johannes.schmid@openismus.com>

	* configure.in:
	* glom/Makefile.am:
	* glom/utility_widgets/Makefile.am:
	* glom/utility_widgets/dragbar.cc:
	* glom/utility_widgets/egg/Makefile.am:
	* glom/utility_widgets/flowtable_dnd.cc:
	* glom/utility_widgets/sidebar.h:
	* glom/utility_widgets/egg/*:
	
	Included eggtoolbar instead of using svn:externals to fix distcheck (#520741)

2008-06-16  Murray Cumming  <murrayc@murrayc.com>

	* glom/dialog_existing_or_new.cc:
	* glom/glom.glade:
	* glom/utility_widgets/dragbar.cc: Added comments for translators.
	Bug #538480 (Andre Klapper).

2008-06-07  Armin Burgmeier  <armin@openismus.com>

	* configure.in:
	* config.h.in: Check whether the strptime function is available.

	* glom/libglom/data_structure/glomconversions.cc (parse_time): Don't
	fall back to strptime if strptime is not available, such as on Windows
	(mingw).

	* glom/dialog_existing_or_new.h:
	* glom/dialog_existing_or_new.cc:
	* glom/dialog_import_csv.cc: Windows build fixes, mostly
	#ifndef/#endif pairs around libepc stuff. We also need to #undef iconv
	which seems to be a define to libiconv on Windows, in order to use
	the Glib::Iconv::iconv function.

	* glom/main.cc: Don include <fontconfig/fontconfig.h> on Windows since
	it is not available. It doesn't seem to be used anyway.

2008-05-23  Armin Burgmeier  <armin@arbur.net>

	* glom/libglom/data_structure/field.h: